k8s/gatekeeper/constraints/c-pod-hardening.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPodHardening
metadata:
  name: pod-hardening
  namespace: frontend
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
