k8s/gatekeeper/constraints/service-account-security.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sServiceAccountSecurity
metadata:
  name: serviceaccount-security
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod", "ServiceAccount"]
      - apiGroups: ["rbac.authorization.k8s.io"]
        kinds: ["ClusterRoleBinding"]
